# self_pixiv_downloader

./: .gitignore  README.md
demoPageDisplay/: demo_B.html  theme-preview.css
docs/: CONTEXT_HANDOFF.md  DOCUMENT_MAP.md  cleanup_candidates.md  maintenance.md  product_requirements.md  progress.md
docs/design/: README.md
docs/releases/: v1.1.0.md  v1.1.1.md  v1.2.0.md
docs/specs/: README.md  api-contract.md  architecture.md  connectivity-account-ux-plan.md  database-schema.md  (+13 more)
src/backend/: Cargo.toml
src/backend/migrations/: 0001_init.sql  0002_pixiv_accounts.sql
src/backend/src/: accounts.rs  ai.rs  api.rs  domain.rs  errors.rs  lib.rs
src/backend/src/api/: dto.rs  error.rs  mod.rs  routes.rs  runtime.rs  tests.rs  worker.rs
src/backend/src/api/handlers/: accounts.rs  downloads.rs  health.rs  images.rs  mod.rs  readiness.rs  settings.rs  smart.rs  tasks.rs
src/backend/src/db/: mod.rs
src/backend/src/downloads/: mod.rs
src/backend/src/images/: mod.rs
src/backend/src/pixiv/: mod.rs
src/backend/src/settings/: mod.rs
src/backend/src/storage/: mod.rs
src/backend/src/tasks/: mod.rs
tauri-app/: package-lock.json  package.json
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/icons/: icon.icns
tauri-app/src-tauri/permissions/: open-external-url.toml  refresh-pixiv-phpsessid.toml  select-download-directory.toml
tauri-app/src-tauri/src/: main.rs
tests/: README.md  run_local.sh
tools/: dev_backend_windows.ps1  dev_frontend_windows.ps1  generate_macos_icon.py
(+45 files in other folders)
