[package]
name = "pixiv_platform_backend"
version = "0.1.0"
edition = "2024"

[lib]
name = "pixiv_platform_backend"
path = "src/lib.rs"

[dependencies]
axum = "0.8"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tower = { version = "0.5", features = ["util"] }
